--- a/Blog.Admin/Views/Shared/Components/DomainSelection/Default.cshtml
+++ b/Blog.Admin/Views/Shared/Components/DomainSelection/Default.cshtml
@@ -4,10 +4,32 @@
     var initialSelection = Model.Domains.FirstOrDefault(d => d.Id == Model.CurrentDomainId);
 }
 
-<div>
+<div x-data="{
+       dropDownOpen: false,
+       dropDownItemIdPrefix: 'domain-selection-dropdown-item-id',
+       activeIndex: null,
+       activeItem: null,
+       onEscClick() {
+         this.close()
+       },
+       onMouseMove(event, index) {
+         if (this.activeIndex === index) return;
+         this.activeIndex = index;
+         this.activeItem = event.target;
+       },
+       onMouseLeave(event) {
+         if (event.toElement.id.includes(this.menuItemIdPrefix)) return;
+         this.activeIndex = null;
+         this.activeItem = null;
+       },
+       close() {
+         this.dropDownOpen = false;
+       }
+     }"
+     x-on:keydown.escape.prevent.stop="onEscClick()">
     <div class="relative mt-1">
-        <button type="button" class="relative w-full cursor-default rounded-md border border-gray-300 bg-white py-2 pl-3 pr-10 text-left shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-1 focus:ring-indigo-500 sm:text-sm" aria-haspopup="listbox" aria-expanded="true" aria-labelledby="listbox-label">
-            <span class="block truncate"></span>
+        <button x-on:click="dropDownOpen = !dropDownOpen" type="button" class=" relative w-full cursor-default rounded-md border border-gray-300 bg-white py-2 pl-3 pr-10 text-left shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-1 focus:ring-indigo-500 sm:text-sm" aria-haspopup="listbox" x-bind:aria-expanded="dropDownOpen" aria-labelledby="listbox-label">
+            <span class="block truncate">@initialSelection?.Name</span>
             <span class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2">
                 <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M10 3a.75.75 0 01.55.24l3.25 3.5a.75.75 0 11-1.1 1.02L10 4.852 7.3 7.76a.75.75 0 01-1.1-1.02l3.25-3.5A.75.75 0 0110 3zm-3.76 9.2a.75.75 0 011.06.04l2.7 2.908 2.7-2.908a.75.75 0 111.1 1.02l-3.25 3.5a.75.75 0 01-1.1 0l-3.25-3.5a.75.75 0 01.04-1.06z" clip-rule="evenodd"/>
@@ -25,30 +47,56 @@
         From: "opacity-100"
         To: "opacity-0"
         -->
-        <ul class="absolute z-10 mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm" tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-option-3">
-            <!--
-            Select option, manage highlight styles based on mouseenter/mouseleave and keyboard navigation.
+        <ul
+            x-show="dropDownOpen"
+            x-transition:enter=""
+            x-transition:enter-start=""
+            x-transition:enter-end=""
+            x-transition:leave="transition ease-in duration-100"
+            x-transition:leave-start="opacity-100"
+            x-transition:leave-end="opacity-0"
+            style="display: none;"
+            x-on:click.outside="close()"
+            class="absolute z-10 mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm" tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-option-3">
 
-            Highlighted: "text-white bg-indigo-600", Not Highlighted: "text-gray-900"
-            -->
-            <li class="text-gray-900 relative cursor-default select-none py-2 pl-3 pr-9" id="listbox-option-0" role="option">
-                <!-- Selected: "font-semibold", Not Selected: "font-normal" -->
-                <span class="font-normal block truncate">Wade Cooper</span>
 
+            @for (var i = 0; i < Model.Domains.Count; i++)
+            {
+                var domain = Model.Domains[i];
                 <!--
-                Checkmark, only display for selected option.
+                Select option, manage highlight styles based on mouseenter/mouseleave and keyboard navigation.
 
-                Highlighted: "text-white", Not Highlighted: "text-indigo-600"
+                Highlighted: "text-white bg-indigo-600", Not Highlighted: "text-gray-900"
                 -->
-                <span class="text-indigo-600 absolute inset-y-0 right-0 flex items-center pr-4">
-                    <!-- Heroicon name: mini/check -->
-                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd"/>
-                    </svg>
-                </span>
-            </li>
+                <li
+                    x-on:mouseleave="onMouseLeave($event)"
+                    x-on:mousemove="onMouseMove($event, @i)"
+                    x-bind:class="activeIndex === @i ? 'text-white bg-indigo-600' : 'text-gray-900'"
+                    id="domain-selection-dropdown-item-id-@i"
+                    class="relative cursor-default select-none py-2 pl-3 pr-9" id="listbox-option-0" role="option">
 
-            <!-- More items... -->
+                    @if (initialSelection.Id == domain.Id)
+                    {
+                        <span class="font-semibold block truncate">@domain.Name</span>
+                        <!--
+                        Checkmark, only display for selected option.
+
+                        Highlighted: "text-white", Not Highlighted: "text-indigo-600"
+                        -->
+                        <span
+                            x-bind:class="activeIndex === @i ? 'text-white' : 'text-indigo-600'"
+                            class="text-indigo-600 absolute inset-y-0 right-0 flex items-center pr-4">
+                            <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd"/>
+                            </svg>
+                        </span>
+                    }
+                    else
+                    {
+                        <a asp-action="Index" asp-controller="Home" asp-route-domainId="@domain.Id" class="font-normal block truncate">@domain.Name</a>
+                    }
+                </li>
+            }
         </ul>
     </div>
 </div>
