refactor: unite user account panel

--- a/Blog.Admin/Views/Shared/_Layout2.cshtml
+++ b/Blog.Admin/Views/Shared/_Layout2.cshtml
@@ -1,3 +1,4 @@
+@using Blog.Admin.ViewComponents
 @{
     var navigation = new List<NavigationDto>
     {
@@ -5,7 +6,7 @@
     };
     var userNavigation = new List<NavigationDto>
     {
-        new NavigationDto(Name: "Setting", Href: Url.Action("Logout", "Account"), Current: false),
+        new NavigationDto(Name: "Domains", Href: Url.Action("Index", "Domain"), Current: false),
         new NavigationDto(Name: "Logout", Href: Url.Action("Logout", "Account"), Current: false),
     };
     // Active: "bg-gray-100", Not Active: ""
@@ -89,45 +90,7 @@
                 </a>
 
                 @* 用户下拉栏 *@
-                <div
-                    x-data="menu({ open: false })"
-                    x-on:keydown.escape.prevent.stop="onEscClick()"
-                    class="relative ml-5 flex-shrink-0">
-                    <div>
-                        <button x-on:click="onButtonClick()" type="button" class="flex rounded-full bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
-                            <span class="sr-only">Open user menu</span>
-                            <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                        </button>
-                    </div>
-
-                    @*
-                    Dropdown menu, show/hide based on menu state.
-
-                    Entering: "transition ease-out duration-100"
-                    From: "transform opacity-0 scale-95"
-                    To: "transform opacity-100 scale-100"
-                    Leaving: "transition ease-in duration-75"
-                    From: "transform opacity-100 scale-100"
-                    To: "transform opacity-0 scale-95"
-                    *@
-                    <div
-                        x-show="open"
-                        x-transition:enter="transition ease-out duration-100"
-                        x-transition:enter-start="transform opacity-0 scale-95"
-                        x-transition:enter-end="transform opacity-100 scale-100"
-                        x-transition:leave="transition ease-in duration-75"
-                        x-transition:leave-start="transform opacity-100 scale-100"
-                        x-transition:leave-end="transform opacity-0 scale-95"
-                        x-on:click.outside="close()"
-                        style="display:none;"
-                        class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-                        @for (var i = 0; i < userNavigation.Count; i++)
-                        {
-                            var nav = userNavigation[i];
-                            <a href="@nav.Href" x-on:mouseleave="onMouseLeave($event)" x-on:mousemove="onMouseMove($event, @i)" x-bind:class="{ 'bg-gray-100': activeIndex === @i }" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-@i">@nav.Name</a>
-                        }
-                    </div>
-                </div>
+                @(await Component.InvokeAsync<UserAccountDropDownViewComponent>("Type2"))
             </div>
         </div>
     </div>
@@ -141,27 +104,7 @@
             }
         </div>
         <div class="border-t border-gray-200 pt-4 pb-3">
-            <div class="mx-auto flex max-w-3xl items-center px-4 sm:px-6">
-                <div class="flex-shrink-0">
-                    <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                </div>
-                <div class="ml-3">
-                    <div class="text-base font-medium text-gray-800">Chelsea Hagon</div>
-                    <div class="text-sm font-medium text-gray-500">chelsea.hagon@example.com</div>
-                </div>
-                <button type="button" class="ml-auto flex-shrink-0 rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-                    <span class="sr-only">View notifications</span>
-                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0"/>
-                    </svg>
-                </button>
-            </div>
-            <div class="mx-auto mt-3 max-w-3xl space-y-1 px-2 sm:px-4">
-                @foreach (var nav in userNavigation)
-                {
-                    <a href="@nav.Href" class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">@nav.Name</a>
-                }
-            </div>
+            @(await Component.InvokeAsync<UserAccountDropDownViewComponent>("Type3"))
         </div>
     </nav>
 </header>
