--- a/Blog.Admin/Views/Shared/_MainLayout.cshtml
+++ b/Blog.Admin/Views/Shared/_MainLayout.cshtml
@@ -177,7 +177,7 @@
             </div>
             <div class="flex items-center">
                 <!-- Profile dropdown -->
-                @(await Component.InvokeAsync<UserAccountDropDownViewComponent>("Narrow"))
+                @(await Component.InvokeAsync<UserAccountDropDownViewComponent>("Type2"))
             </div>
         </div>
     </div>
