--- a/Blog.Admin/Views/Account/Register.cshtml
+++ b/Blog.Admin/Views/Account/Register.cshtml
@@ -1,5 +1,5 @@
 @{
-    Layout = "_AuthenticationLayout";
+    Layout = "_Layout3";
     ViewData["Title"] = "Register";
     ViewData["Sibling"] = "Sign in";
     ViewData["SiblingLink"] = Url.Action("Login");
