--- a/Blog.Admin/Views/Domain/Create.cshtml
+++ b/Blog.Admin/Views/Domain/Create.cshtml
@@ -1,7 +1,7 @@
 @model CreateDomainViewModel
 
 @{
-    Layout = "_Layout2Leveled";
+    Layout = "_Layout2";
 }
 
 <form class="space-y-8 divide-y divide-gray-200 mt-4" method="post">
