--- a/Blog.Admin/Views/Domain/Edit.cshtml
+++ b/Blog.Admin/Views/Domain/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "title";
-    Layout = "_Layout2Leveled";
+    Layout = "_Layout2";
 }
 
 <form class="space-y-8 divide-y divide-gray-200 mt-4" method="post" asp-action="Edit" asp-route-id="@Model.Id">
