--- a/Blog.Admin/Views/Category/Index.cshtml
+++ b/Blog.Admin/Views/Category/Index.cshtml
@@ -1,6 +1,50 @@
+@model CategoryViewModel
 @{
     ViewBag.Title = "title";
-    Layout = "_Layout";
+    Layout = "_Layout1";
 }
 
-<h2>title</h2>
+
+<!-- Page title & actions -->
+<div class="border-b border-gray-200 px-4 py-4 sm:flex sm:items-center sm:justify-between sm:px-6 lg:px-8">
+    <div class="min-w-0 flex-1">
+        <h1 class="text-lg font-medium leading-6 text-gray-900 sm:truncate">Category</h1>
+    </div>
+    <div class="mt-4 flex sm:mt-0 sm:ml-4">
+        <a asp-action="AddCategory" asp-controller="Category" type="button" class="order-0 inline-flex items-center rounded-md border border-transparent bg-purple-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 sm:order-1 sm:ml-3">Create</a>
+    </div>
+</div>
+
+
+<div class="mt-8 overflow-hidden shadow ring-1 ring-black ring-opacity-5">
+    <table class="min-w-full divide-y divide-gray-300">
+        <thead class="bg-gray-50">
+        <tr>
+            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Name</th>
+            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Id</th>
+            <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
+                <span class="sr-only">Action</span>
+            </th>
+        </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-200 bg-white">
+        @for (var i = 0; i < Model.Categories.Count; i++)
+        {
+            var category = Model.Categories[i];
+            <tr>
+                <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
+                    @category.Name
+                    <dl class="font-normal lg:hidden">
+                        <dt class="sr-only">Id</dt>
+                        <dd class="mt-1 truncate text-gray-700">@category.Id</dd>
+                    </dl>
+                </td>
+                <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell">@category.Id</td>
+                <td class="py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
+                    <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit</a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
