--- a/Blog.Admin/Views/Shared/_Layout3.cshtml
+++ b/Blog.Admin/Views/Shared/_Layout3.cshtml
@@ -1,6 +1,13 @@
-@{
-    Layout = "_Layout";
-}
+<!DOCTYPE html>
+<html lang="en" class="h-full bg-white">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="~/css/tailwindcss.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+</head>
+<body class="h-full">
 
 <div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8 bg-gray-100">
     <div class="sm:mx-auto sm:w-full sm:max-w-md">
@@ -18,3 +25,9 @@
         </div>
     </div>
 </div>
+
+<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+@await RenderSectionAsync("Scripts", required: false)
+</body>
+</html>
