--- a/Blog.Admin/Views/Category/AddCategory.cshtml
+++ b/Blog.Admin/Views/Category/AddCategory.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout1";
 }
 <div class="px-4 sm:px-6 lg:px-8 mt-4">
-    <form class="space-y-8 divide-y divide-gray-200 mt-4" method="post">
+    <form method="post">
         <input type="hidden" asp-for="DomainId" value="@Model.DomainId"/>
         <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
             <div class="space-y-6 sm:space-y-5">
