--- a/Blog.Admin/Views/Shared/_Layout1.cshtml
+++ b/Blog.Admin/Views/Shared/_Layout1.cshtml
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 </head>
 <body class="h-full">
-
+<div x-data="modal">
 <div x-data="{
        offCanvasMenuOpen: false,
      }"
@@ -203,9 +203,159 @@
         </main>
     </div>
 </div>
+<div x-show="showModal" style="display: none;" class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+    <!--
+    Background backdrop, show/hide based on modal state.
+    
+    Entering: "ease-out duration-300"
+    From: "opacity-0"
+    To: "opacity-100"
+    Leaving: "ease-in duration-200"
+    From: "opacity-100"
+    To: "opacity-0"
+    -->
+    <div
+        x-show="showModal"
+        x-transition:enter="ease-out duration-300"
+        x-transition:enter-start="opacity-0"
+        x-transition:enter-end="opacity-100"
+        x-transition:leave="ease-in duration-200"
+        x-transition:leave-start="opacity-100"
+        x-transition:leave-end="opacity-0"
+        class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity">
+    </div>
 
+
+    <div class="fixed inset-0 z-10 overflow-y-auto">
+        <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
+            <!--
+            Modal panel, show/hide based on modal state.
+    
+            Entering: "ease-out duration-300"
+            From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+            To: "opacity-100 translate-y-0 sm:scale-100"
+            Leaving: "ease-in duration-200"
+            From: "opacity-100 translate-y-0 sm:scale-100"
+            To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+            -->
+            <div
+                x-show="showModal"
+                x-transition:enter="ease-out duration-300"
+                x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                x-transition:leave="ease-in duration-200"
+                x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+                x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                x-bind:class=" modal?.cancelText != null ? 'sm:max-w-lg' : 'sm:max-w-sm' "
+                class="relative transform overflow-hidden rounded-lg bg-white px-4 pt-5 pb-4 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:p-6">
+                <div x-bind:class=" modal?.type === 'danger' ? 'sm:flex sm:items-start' : '' ">
+                    <div x-show="modal?.type === 'succeed'" class="mx-auto flex h-12 w-12 items-center justify-center rounded-full bg-green-100">
+                        <svg class="h-6 w-6 text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5"/>
+                        </svg>
+                    </div>
+                    <div x-show="modal?.type === 'danger'" class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+                        <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"/>
+                        </svg>
+                    </div>
+
+                    <div x-bind:class="modal?.type === 'danger' ? 'sm:mt-0 sm:ml-4 sm:text-left' : 'sm:mt-5'" class="mt-3 text-center sm:mt-5">
+                        <h3 class="text-lg font-medium leading-6 text-gray-900" id="modal-title" x-text="modal?.title">MODAL_TITLE</h3>
+                        <div class="mt-2">
+                            <p class="text-sm text-gray-500" x-text="modal?.message">MODAL_MESSAGE</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div x-show="modal?.type == 'succeed' && modal?.cancelText == null" class="mt-5 sm:mt-6">
+                    <button x-on:click="modal?.confirmAction()" type="button" class="inline-flex w-full justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:text-sm">Go back to dashboard</button>
+                </div>
+
+                <div x-show="modal?.type == 'succeed' && modal?.cancelText != null" class="mt-5 sm:mt-6 sm:grid sm:grid-flow-row-dense sm:grid-cols-2 sm:gap-3">
+                    <button x-on:click="modal?.confirmAction()" type="button" class="inline-flex w-full justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:col-start-2 sm:text-sm">Deactivate</button>
+                    <button x-on:click="closeModal()" type="button" class="mt-3 inline-flex w-full justify-center rounded-md border border-gray-300 bg-white px-4 py-2 text-base font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:col-start-1 sm:mt-0 sm:text-sm">Cancel</button>
+                </div>
+
+                <div x-show="modal?.type == 'danger'" class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+                    <button x-on:click="modal?.confirmAction()" x-text="modal?.confirmText" type="button" class="inline-flex w-full justify-center rounded-md border border-transparent bg-red-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 sm:ml-3 sm:w-auto sm:text-sm">Deactivate</button>
+                    <button x-on:click="closeModal()" x-text="modal?.cancelText" type="button" class="mt-3 inline-flex w-full justify-center rounded-md border border-gray-300 bg-white px-4 py-2 text-base font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script>
+    document.addEventListener('alpine:init', () => {
+        Alpine.data('modal', () => ({
+            showModal: false,
+            modal: null,
+            addModal(type, title, message, cancelText, confirmText, confirmAction) {
+              this.modal = {
+                type: type,
+                title: title, 
+                message: message, 
+                cancelText: cancelText,
+                confirmText: confirmText,
+                confirmAction: confirmAction
+              }
+            },
+            closeModal() {
+              this.showModal = false; 
+            },
+            doConfirm() {
+              this.modal?.confirmAction()
+            },
+            popUpDanger(title, message, cancelText, confirmText, formSelector) {
+              console.log(title, message, cancelText, confirmText, formSelector)
+              this.addModal(
+                'danger',
+                title,
+                message,
+                cancelText,
+                confirmText,
+                () => {
+                  const form = document.querySelector(formSelector);
+                  form.submit();
+                }
+              )
+              this.showModal = true;
+            },
+            popUpSucceed(title, message, cancelText, confirmText, formSelector) {
+              this.addModal(
+                'succeed',
+                title,
+                message,
+                cancelText,
+                confirmText,
+                () => {
+                  const form = document.querySelector(formSelector);
+                  form.submit();
+                }
+              )
+              this.showModal = true;
+            },
+            popUpSucceedNoCancel(title, message, confirmText, formSelector) {
+              this.addModal(
+                'succeed',
+                title,
+                message,
+                null,
+                confirmText,
+                () => {
+                  const form = document.querySelector(formSelector);
+                  form.submit();
+                }
+              )
+              this.showModal = true;
+            },
+          }))
+    })
+</script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
