--- a/Blog.Admin/Views/Shared/_Layout2.cshtml
+++ b/Blog.Admin/Views/Shared/_Layout2.cshtml
@@ -14,84 +14,84 @@
 </head>
 @* When the mobile menu is open, add `overflow-hidden` to the `body` element to prevent double scrollbars *@
 <body class="h-full" x-data="{mobileMenuOpen: false}" x-bind:class="mobileMenuOpen ? 'overflow-hidden' : ''">
-
-@* Open: "fixed inset-0 z-40 overflow-y-auto", Closed: "" *@
-<header x-bind:class="mobileMenuOpen ? 'fixed inset-0 z-40 overflow-y-auto' : ''" class="bg-white shadow-sm lg:static lg:overflow-y-visible">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-        <div class="relative flex justify-between lg:gap-8 xl:grid xl:grid-cols-12">
-            @* 图标 *@
-            <div class="flex md:absolute md:inset-y-0 md:left-0 lg:static xl:col-span-2">
-                <div class="flex flex-shrink-0 items-center">
-                    <a href="#">
-                        <img class="block h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
-                    </a>
+<div x-data="modal">
+    @* Open: "fixed inset-0 z-40 overflow-y-auto", Closed: "" *@
+    <header x-bind:class="mobileMenuOpen ? 'fixed inset-0 z-40 overflow-y-auto' : ''" class="bg-white shadow-sm lg:static lg:overflow-y-visible">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+            <div class="relative flex justify-between lg:gap-8 xl:grid xl:grid-cols-12">
+                @* 图标 *@
+                <div class="flex md:absolute md:inset-y-0 md:left-0 lg:static xl:col-span-2">
+                    <div class="flex flex-shrink-0 items-center">
+                        <a href="#">
+                            <img class="block h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
+                        </a>
+                    </div>
                 </div>
-            </div>
-            @* 搜索栏 *@
-            <div class="min-w-0 flex-1 md:px-8 lg:px-0 xl:col-span-6">
-                <div class="flex items-center px-6 py-4 md:mx-auto md:max-w-3xl lg:mx-0 lg:max-w-none xl:px-0">
-                    <div class="w-full">
-                        <label for="search" class="sr-only">Search</label>
-                        <div class="relative">
-                            <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
-                                <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd"/>
-                                </svg>
+                @* 搜索栏 *@
+                <div class="min-w-0 flex-1 md:px-8 lg:px-0 xl:col-span-6">
+                    <div class="flex items-center px-6 py-4 md:mx-auto md:max-w-3xl lg:mx-0 lg:max-w-none xl:px-0">
+                        <div class="w-full">
+                            <label for="search" class="sr-only">Search</label>
+                            <div class="relative">
+                                <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+                                    <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                        <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <input id="search" name="search" class="block w-full rounded-md border border-gray-300 bg-white py-2 pl-10 pr-3 text-sm placeholder-gray-500 focus:border-indigo-500 focus:text-gray-900 focus:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-indigo-500 sm:text-sm" placeholder="Search" type="search">
                             </div>
-                            <input id="search" name="search" class="block w-full rounded-md border border-gray-300 bg-white py-2 pl-10 pr-3 text-sm placeholder-gray-500 focus:border-indigo-500 focus:text-gray-900 focus:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-indigo-500 sm:text-sm" placeholder="Search" type="search">
                         </div>
                     </div>
                 </div>
-            </div>
-            @* 手机的面包按钮 *@
-            <div class="flex items-center md:absolute md:inset-y-0 md:right-0 lg:hidden">
-                @* Mobile menu button *@
-                <button x-on:click="mobileMenuOpen = !mobileMenuOpen" type="button" class="-mx-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" x-bind:aria-expanded="mobileMenuOpen">
-                    <span class="sr-only">Open menu</span>
-                    @*
+                @* 手机的面包按钮 *@
+                <div class="flex items-center md:absolute md:inset-y-0 md:right-0 lg:hidden">
+                    @* Mobile menu button *@
+                    <button x-on:click="mobileMenuOpen = !mobileMenuOpen" type="button" class="-mx-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" x-bind:aria-expanded="mobileMenuOpen">
+                        <span class="sr-only">Open menu</span>
+                        @*
                     Icon when menu is closed.
 
                     Menu open: "hidden", Menu closed: "block"
                     *@
-                    <svg x-bind:class="mobileMenuOpen ? 'hidden' : 'block'" class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" x-bind:aria-hidden="mobileMenuOpen">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
-                    </svg>
-                    @*
+                        <svg x-bind:class="mobileMenuOpen ? 'hidden' : 'block'" class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" x-bind:aria-hidden="mobileMenuOpen">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
+                        </svg>
+                        @*
                     Icon when menu is open.
 
                     Menu open: "block", Menu closed: "hidden"
                     *@
-                    <svg x-bind:class="mobileMenuOpen ? 'block' : 'hidden'" class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" x-bind:aria-hidden="!mobileMenuOpen">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
-                    </svg>
-                </button>
-            </div>
+                        <svg x-bind:class="mobileMenuOpen ? 'block' : 'hidden'" class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" x-bind:aria-hidden="!mobileMenuOpen">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+                        </svg>
+                    </button>
+                </div>
 
-            @* 电脑的右侧的按钮 *@
-            <div class="hidden lg:flex lg:items-center lg:justify-end xl:col-span-4">
-                @* 提醒 *@
-                <a href="#" class="ml-5 flex-shrink-0 rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-                    <span class="sr-only">View notifications</span>
-                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0"/>
-                    </svg>
-                </a>
+                @* 电脑的右侧的按钮 *@
+                <div class="hidden lg:flex lg:items-center lg:justify-end xl:col-span-4">
+                    @* 提醒 *@
+                    <a href="#" class="ml-5 flex-shrink-0 rounded-full bg-white p-1 text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                        <span class="sr-only">View notifications</span>
+                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0"/>
+                        </svg>
+                    </a>
 
-                @* 用户下拉栏 *@
-                @(await Component.InvokeAsync<UserAccountDropDownViewComponent>("Type2"))
+                    @* 用户下拉栏 *@
+                    @(await Component.InvokeAsync<UserAccountDropDownViewComponent>("Type2"))
+                </div>
             </div>
         </div>
-    </div>
 
-    @* Mobile menu, show/hide based on menu state. *@
-    <nav x-show="mobileMenuOpen" style="display: none;" class="lg:hidden" aria-label="Global">
-        <div class="border-t border-gray-200 pt-4 pb-3">
-            @(await Component.InvokeAsync<UserAccountDropDownViewComponent>("Type3"))
-        </div>
-    </nav>
-</header>
+        @* Mobile menu, show/hide based on menu state. *@
+        <nav x-show="mobileMenuOpen" style="display: none;" class="lg:hidden" aria-label="Global">
+            <div class="border-t border-gray-200 pt-4 pb-3">
+                @(await Component.InvokeAsync<UserAccountDropDownViewComponent>("Type3"))
+            </div>
+        </nav>
+    </header>
 
-<div x-data="modal">
+
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 mt-4">
         @if (levels.Links.ToList().Count > 0)
         {
@@ -176,8 +176,8 @@
                     </div>
 
                     <div x-show="modal?.type == 'danger'" class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
-                        <button x-on:click="modal?.confirmAction()" type="button" class="inline-flex w-full justify-center rounded-md border border-transparent bg-red-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 sm:ml-3 sm:w-auto sm:text-sm">Deactivate</button>
-                        <button x-on:click="closeModal()" type="button" class="mt-3 inline-flex w-full justify-center rounded-md border border-gray-300 bg-white px-4 py-2 text-base font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm">Cancel</button>
+                        <button x-on:click="modal?.confirmAction()" x-text="modal?.confirmText" type="button" class="inline-flex w-full justify-center rounded-md border border-transparent bg-red-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 sm:ml-3 sm:w-auto sm:text-sm">Deactivate</button>
+                        <button x-on:click="closeModal()" x-text="modal?.cancelText" type="button" class="mt-3 inline-flex w-full justify-center rounded-md border border-gray-300 bg-white px-4 py-2 text-base font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm">Cancel</button>
                     </div>
                 </div>
             </div>
@@ -190,34 +190,6 @@
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script>
     document.addEventListener('alpine:init', () => {
-        Alpine.data('menu', (initialParameter) => ({
-            open: initialParameter.open ?? false,
-            menuItemIdPrefix: initialParameter.menuItemIdPrefix ?? "menu-item",
-            activeIndex: null,
-            activeItem: null,
-            onButtonClick() {
-                this.open = !this.open;
-            },
-            onEscClick() {
-                this.close();
-            },
-            onMouseMove(event, index) {
-                if (this.activeIndex !== index) {
-                    this.activeIndex = index
-                    this.activeItem = event.target;
-                }
-            },
-            onMouseLeave(event) {
-                if (!event.toElement.id.includes(this.menuItemIdPrefix)) {
-                    this.activeIndex = null;
-                    this.activeItem = null;
-                }
-            },
-            close() {
-                this.open = false;
-            }
-        }))
-        
         Alpine.data('modal', () => ({
             showModal: false,
             modal: null,
@@ -238,7 +210,6 @@
               this.modal?.confirmAction()
             },
             popUpDanger(title, message, cancelText, confirmText, formSelector) {
-              console.log(title, message, cancelText, confirmText, formSelector)
               this.addModal(
                 'danger',
                 title,
