--- a/Blog.Admin/Views/Post/Create.cshtml
+++ b/Blog.Admin/Views/Post/Create.cshtml
@@ -64,14 +64,15 @@
             </div>
         </div>
         <div x-show="postContentData?.cover?.resourceId != null">
-            <div class="flex gap-4 items-end">
+            <div class="flex gap-4 items-start">
                 <img alt="cover" x-bind:src="postContentData?.cover?.url" class="h-28 p-2 border border-gray-200 rounded-md"/>
-                <textarea x-model="image.caption" rows="4" x-bind:id="coverTextareaId()" class="block w-56 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
-                <div>
-                    <div class="font-medium text-gray-700" x-text="postContentData.cover?.fileName"></div>
-                    <div class="text-gray-500" x-text="formatBytes(postContentData.cover?.fileSize)"></div>
-
-                    <button x-on:click="deleteCover()" type="button" class="h-8 inline-flex items-center rounded-md border border-gray-300 bg-white px-3 py-2 text-sm font-medium leading-4 text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Delete</button>
+                <textarea x-model="postContentData.cover.caption" rows="4" x-bind:id="coverTextareaId()" class="block w-56 h-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
+                <div class="flex flex-col gap-4">
+                    <div>
+                        <div class="flex-none font-medium text-gray-700 flex-0" x-text="postContentData.cover?.fileName"></div>
+                        <div class="flex-none text-gray-500" x-text="formatBytes(postContentData.cover?.fileSize)"></div>
+                    </div>
+                    <button x-on:click="deleteCover()" type="button" class="flex-none h-8 inline-flex items-center rounded-md border border-gray-300 bg-white px-3 py-2 text-sm font-medium leading-4 text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Delete</button>
                 </div>
             </div>
         </div>
@@ -108,7 +109,7 @@
 
 <div class="sm:grid  sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
     <template x-for="(block, index) in postContentData.blocks" x-bind:key="block.uuid">
-        <div class="flex max-w-7xl">
+        <div class="flex max-w-7xl" draggable="true" x-on:dragstart.self="dragStartHandler($event, index)" x-on:drop.prevent="dropHandler($event, index)" x-on:dragover="dropOverHandler($event, index)">
             <button x-on:click="addBlock(index)" type="button" class="w-10 h-10">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15"/>
@@ -174,7 +175,7 @@
                 <div>
                     <template x-for="(image, imageIndex) in block.images" x-bind:key="image.uuid">
                         <div>
-                            <div x-show="image.resourceId != null" class="flex gap-4 items-end">
+                            <div x-show="image.resourceId != null" class="flex gap-4 items-start">
                                 <img alt="cover" x-bind:src="image.url" class="h-28 w-28 p-2 border border-gray-200 rounded-md" src=""/>
                                 <textarea x-model="image.caption" rows="4" x-bind:id="contentImagesTextareaId(index, imageIndex)" class="block w-56 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
                                 <div>
@@ -387,6 +388,21 @@
               const b = this.postContentData.blocks[idx]
               setBlockType(b, 'paragraph');
             },
+            dragStartHandler(event, index) {
+              event.dataTransfer.setData('text/plain', index);
+            },
+            dropHandler(event, index) {
+              const fromIndex = event.dataTransfer.getData('text/plain');
+              if (fromIndex === index) return;
+              const bs = this.postContentData.blocks;
+              const deleted = bs.splice(fromIndex, 1);
+              const padding = fromIndex < index ? -1 : 0;
+              bs.splice(index + padding,  0, deleted[0]);
+            },
+            dropOverHandler(event, index) {
+              event.preventDefault();
+              event.dataTransfer.dropEffect = 'move';
+            }
           }))
         })
     </script>
